@@ -15,6 +15,7 @@ import org.apache.maven.project.MavenProjectHelper
  */
 @Mojo(name = "attach-tile", requiresProject = true, requiresDependencyResolution = ResolutionScope.NONE, defaultPhase = LifecyclePhase.PACKAGE)
 class AttachTileMojo extends AbstractTileMojo {
+
 	@Component
 	MavenProjectHelper projectHelper
 
@@ -26,12 +27,12 @@ class AttachTileMojo extends AbstractTileMojo {
 
 		File tile = getTile()
 
-		if (new TileValidator().loadModel(logger, tile)) {
+		if (new TileValidator().loadModel(logger, tile, buildSmells)) {
 			projectHelper.attachArtifact(project, "pom", "tile-pom", tile)
 
 			logger.info("Tile: attaching tile ${tile.path}")
 		} else {
-			throw new MojoFailureException("There is no tile called ${tile.path}!")
+			throw new MojoFailureException("Unable to validate tile ${tile.path}!")
 		}
 
 	}
